Migrate to Palm1

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
-    <string name="app_name">PALM0</string>
+    <string name="app_name">Palm</string>
+    <string name="settings">Settings</string>
 </resources>
